# OfflineLimiter

./: CMakeLists.txt  README.md  build.ps1  limiter.hpp  offlinelimiter.cpp  polyphase.hpp
.github/workflows/: build.yml
fir/: downsamplercoefficient.hpp  higheliminatorcoefficient.hpp  upsamplercoefficient.hpp
source/: limiter.hpp  offlinelimiter.cpp
test/: README.md  testnormalize.py  testsignal.py
